--- a/src/pages/gallery-tabs/gallery-tabs.scss
+++ b/src/pages/gallery-tabs/gallery-tabs.scss
@@ -294,7 +294,7 @@ page-gallery-tabs {
 			color: rgb(102,102,102);
 			// padding: 0px 25px;
 			margin: 0 auto !important;
-			font-size: 1.5rem;
+			font-size: 1.4rem !important;
 			p {	
 				line-height: 2;
 			}
@@ -642,7 +642,7 @@ page-gallery-tabs {
     .contentSections {
         margin: 0 auto;
         width: 95%;
-        height: 50vh;
+        height: 55vh;
         text-align: center;
         padding: 0px 10px;
         .mainTexts {
@@ -658,9 +658,9 @@ page-gallery-tabs {
         .lestMainTexts { font-size: 2rem; }
         .subTexts {
             color: rgb(102,102,102);
-            padding: 0px 25px;
+            padding: 0px 0px 25px 0px;
             margin: 0 auto !important;
-            font-size: 1.5rem;
+            font-size: 1.4rem !important;
             p { 
                 line-height: 1.8;
             }
